--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,8 +19,9 @@ a {
   html {
     color-scheme: dark;
   }
+
   body {
     color: white;
-    background: black;
+    background: rgba(5, 5, 5, 0.673);
   }
 }
