--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,64 @@
 .container {
-  padding: 0 2rem;
+  margin: 0;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  background: #272727c7;
+  padding: .2rem;
+  text-align: center;
+  font-size: .8rem;
+  font-weight: 600;
+}
+
+.header button {
+  cursor: pointer;
+  background: transparent;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  padding: 0 10rem;
+}
+
+.header .titleheader {
+  text-align: center;
+  padding: 0 5rem;
+}
+
+
+
+.center {
+  margin: 0 0 0 0;
+  display: flex;
+  justify-content: space-between;
+  height: 45rem;
+}
+
+.explorer {
+  width: 20%;
+  height: 100%;
+  background-color: #1f1e1edb;
+}
+
+.explorer .h3 {
+  text-align: center;
+}
+
+.explorer .file {
+  cursor: pointer;
+}
+
+.explorer button {
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  border-radius: 10px;
+  margin: 0 0 .5rem 0;
 }
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  padding: 0 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,19 +66,15 @@
 }
 
 .footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+  height: 7%;
+  border-top: 2px solid #eaeaea;
+  text-align: center;
+  background-color: #1d1e1f;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.footer span {
+  font-size: 1.5rem;
+  font-weight: 600;
 }
 
 .title a {
@@ -116,13 +165,16 @@
 }
 
 @media (prefers-color-scheme: dark) {
+
   .card,
   .footer {
     border-color: #222;
   }
+
   .code {
     background: #111;
   }
+
   .logo img {
     filter: invert(1);
   }
