--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,14 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+button:hover {
+  color: #0070f3;
+}
+
+* ::-webkit-scrollbar {
+  display: none;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -23,5 +31,9 @@ a {
   body {
     color: white;
     background: rgba(5, 5, 5, 0.673);
+  }
+
+  * ::-webkit-scrollbar {
+    display: none;
   }
 }
