--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -179,7 +179,6 @@
   bottom: 0rem;
   right: 0;
   width: 83.3%;
-  height: 30%;
   z-index: 99999;
   display: flex;
   overflow: scroll;
@@ -234,15 +233,38 @@
 }
 
 .code {
-  background: #fafafa;
-  min-width: 100rem;
-  max-width: max-content;
+  width: 100%;
   height: 100%;
   border-radius: 5px;
   padding: 0.75rem;
   font-size: .9rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
+  background-color: #343333db;
+}
+
+.code div {
+  margin-bottom: 1rem;
+  overflow: scroll;
+  padding-bottom: 1rem;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+}
+
+.code span {
+  padding: 0.5rem 0 0 0.5rem;
+}
+
+.code div div span {
+  color: #fff;
+  margin-bottom: 0.2rem;
+}
+
+.tableStyle {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .grid {
@@ -303,7 +325,7 @@
   }
 
   .code {
-    background: #222;
+    background-color: #343333db;
   }
 
   .logo img {
