--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -179,9 +179,10 @@
   bottom: 0rem;
   right: 0;
   width: 83.3%;
+  height: 40%;
   z-index: 99999;
   display: flex;
-  overflow: scroll;
+  overflow: hidden;
   white-space: nowrap;
   background-color: #343333db;
 }
@@ -247,8 +248,13 @@
   margin-bottom: 1rem;
   overflow: scroll;
   padding-bottom: 1rem;
+}
+
+.code > div > div {
+  background-color: #222;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   border: 1px solid #eaeaea;
-  border-radius: 10px;
 }
 
 .code span {
@@ -257,14 +263,24 @@
 
 .code div div span {
   color: #fff;
-  margin-bottom: 0.2rem;
+  padding-bottom: 0.2rem;
 }
 
 .tableStyle {
+  background-color: #222;
   width: 100%;
+  max-height: 9rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+.tableStyle th {
+  text-align: left;
+  border: 1px solid #eaeaea;
+}
+.tableStyle td {
+  text-align: center;
+  border: 1px solid #eaeaea;
 }
 
 .grid {
